--- a/MauiApp2/Views/Pages/EditDeviceDataPage.xaml
+++ b/MauiApp2/Views/Pages/EditDeviceDataPage.xaml
@@ -3,15 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp2.Views.Pages.EditDeviceDataPage"
              Title="Данные">
-    <StackLayout>
-        <Label Text="Прибор" />
-        <Picker x:Name="pickerDevice" 
-                ItemsSource="{Binding}" ItemDisplayBinding="{Binding Name}"/>
-        <Label Text="Значение" />
-        <Entry x:Name="entryValue" Text="{Binding Value}" />
-        <StackLayout Orientation="Horizontal">
-            <Button Text="Сохранить" Clicked="SaveData" />
-            <Button Text="Отмена" Clicked="Cancel" />
+    <StackLayout Margin="5">
+        <Label Text="Прибор"  Margin="5"/>
+        <Picker x:Name="pickerDevice" Margin="5" BackgroundColor="LightGray"
+                ItemsSource="{Binding}" ItemDisplayBinding="{Binding Name}" 
+                HorizontalTextAlignment="Center"/>
+        <Label Text="Значение"  Margin="5"/>
+        <StackLayout Margin="5" BackgroundColor="LightGray">
+            <Entry x:Name="entryValue" Margin="5,0" BackgroundColor="LightGray" 
+               Text="{Binding Value}" Keyboard="Telephone"/>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal" Margin="5">
+            <Button Text="Сохранить" Clicked="SaveData"  Margin="5"/>
+            <Button Text="Отмена" Clicked="Cancel" Margin="5"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
